--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
 <div class="container">
 
-  <div class="display"></div>
+  <div id="display">
+  </div>
   <div>
-    <button>7</button><button>8</button><button>9</button><button>DEL</button><button>4</button><button>5</button><button>6</button><button>+</button><button>1</button><button>2</button><button>3</button><button>-</button><button>.</button><button>0</button><button>/</button><button>x</button><button>Reset</button><button>=</button>
+    <button id="7" class="number">7</button><button id="8" class="number">8</button><button id="9" class="number">9</button><button id="del" class="delete">DEL</button><button id="4" class="number">4</button><button id="5" class="number">5</button><button id="6" class="number">6</button><button id="+" class="addition">+</button><button id="1" class="number">1</button><button id="2" class="number">2</button><button id="3" class="number">3</button><button id="-" class="substraction">-</button><button id="." class="dot">.</button><button id="0" class="number">0</button><button id="/" class="divide">/</button><button id="*" class="multiply">x</button><butto id="res" class="reset">Reset</button><button id="eq" class="equals">=</button>
   </div>
 
 </div>
