--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div class="container">
 
   <div id="display">
+    <div id="display-text"></div>
   </div>
   <div>
     <button id="7" class="number">7</button><button id="8" class="number">8</button><button id="9" class="number">9</button><button id="del" class="delete">DEL</button><button id="4" class="number">4</button><button id="5" class="number">5</button><button id="6" class="number">6</button><button id="+" class="addition">+</button><button id="1" class="number">1</button><button id="2" class="number">2</button><button id="3" class="number">3</button><button id="-" class="substraction">-</button><button id="." class="dot">.</button><button id="0" class="number">0</button><button id="/" class="divide">/</button><button id="*" class="multiply">x</button><butto id="res" class="reset">Reset</button><button id="eq" class="equals">=</button>
